--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  background-color: #fafafa;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  padding: 20px;
+  display: flex;
+  border-bottom: 1px solid lightgray;
+  object-fit: contain;
+  justify-content: space-between;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.register {
+  margin-top: 20px;
+  display: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.inpt {
+  height: 30px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  float: right;
+}
+
+.app__logo {
+  margin-left: 20px;
+  object-fit: contain;
 }
